tests/ui/typeck/issue-7813.rs
fn main() {
    let v = &[]; //~ ERROR type annotations needed
    let it = v.iter();
}
